@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4RayTracerViewer.cc,v 1.6 2000-05-13 10:55:56 johna Exp $
+// $Id: G4RayTracerViewer.cc,v 1.7 2001-05-18 09:59:36 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 
 #include "G4RayTracerViewer.hh"
@@ -20,8 +20,8 @@
 
 G4RayTracerViewer::G4RayTracerViewer
 (G4VSceneHandler& sceneHandler, const G4String& name):
-  fFileCount(0),
-  G4VViewer(sceneHandler, sceneHandler.IncrementViewCount(), name) {}
+  G4VViewer(sceneHandler, sceneHandler.IncrementViewCount(), name),
+  fFileCount(0) {}
 
 G4RayTracerViewer::~G4RayTracerViewer() {}
 
